--- a/blocks/product-card.liquid
+++ b/blocks/product-card.liquid
@@ -39,6 +39,9 @@
       "type": "_product-card-gallery"
     },
     {
+      "type": "_product-card-gallery-customizable"
+    },
+    {
       "type": "product-title"
     }
   ],
