--- a/blocks/product-title.liquid
+++ b/blocks/product-title.liquid
@@ -7,6 +7,13 @@
 {% elsif block.settings.product != blank %}
   {% assign product_title = '<p>' | append: block.settings.product.title | append: '</p>' %}
   {% render 'text', fallback_text: product_title, block: block %}
+  
+  {% comment %} Span oculto con el color de estampación del producto {% endcomment %}
+  <span class="product-customization-color" 
+        style="display: none;" 
+        data-product-id="{{ block.settings.product.id }}"
+        data-color="{{ block.settings.product.metafields.custom.color_estampacion.value | default: '#FFFFFF' }}">
+  </span>
 {% endif %}
 
 {% schema %}
